force-app/main/default/objects/Credit_Check__c/Credit_Check__c.object-meta.xml
<CustomObject>
    <description>Immutable record of a single Equifax/CRI pull for a loan application. Insert-only — never updated after creation. Cascade-deletes with its parent Loan Application at Part IIIA retention expiry.</description>
    <label>Credit Check</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Credit Check Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Checks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>