force-app/main/default/objects/Credit_Check__c/fields/Credit_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check_Date__c</fullName>
    <label>Credit Check Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>