force-app/main/default/objects/Credit_Check__c/fields/Credit_Check_Reference__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check_Reference__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <inlineHelpText>Bureau enquiry reference</inlineHelpText>
    <label>Credit Check Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>