force-app/main/default/objects/Credit_Check__c/fields/Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>Credit_Score__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>Bureau credit score returned by this specific enquiry. Not required — a failed bureau call may still need logging without a score.</description>
    <label>Credit Score</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>