force-app/main/default/objects/Credit_Check__c/fields/Delete_After_Date__c.field-meta.xml
<CustomField>
    <fullName>Delete_After_Date__c</fullName>
    <description>Part IIIA retention expiry. Not required — the calculation isn't built yet (open thread for a future Apex/Flow component).</description>
    <inlineHelpText>Part IIIA retention expiry</inlineHelpText>
    <label>Delete After Date</label>
    <type>Date</type>
</CustomField>