force-app/main/default/objects/Credit_Check__c/fields/Full_Credit_Report__c.field-meta.xml
<CustomField>
    <fullName>Full_Credit_Report__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>Optional raw bureau payload. May be left unpopulated.</description>
    <label>Full Credit Report</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>