force-app/main/default/objects/Credit_Check__c/fields/Is_Latest__c.field-meta.xml
<CustomField>
    <fullName>Is_Latest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>No flip-previous-record-to-false logic yet — open thread for the future Apex callout component.</description>
    <label>Is Latest</label>
    <type>Checkbox</type>
</CustomField>